--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,8 @@
       </small>
     </footer>
   </div>
-
+  <img
+    src="https://devnos-cdn-endpoint-000.azureedge.net/devnosbloganalytics/analytics.gif?sv=2019-10-10&st=2020-09-01T21%3A09%3A00Z&se=2025-09-02T21%3A09%3A00Z&sr=b&sp=r&sig=1G6XdNR7GQyEX34C3Jq9syiyXwU9XEe66S5CCgWsIVQ%3D">
 </body>
 
 </html>
