--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,8 @@
     </footer>
   </div>
   <img
-    src="https://devnos-cdn-endpoint-000.azureedge.net/devnosbloganalytics/onebyone.gif?sv=2019-10-10&st=2020-09-01T22%3A48%3A03Z&se=2025-09-02T22%3A48%3A00Z&sr=b&sp=r&sig=YVP0a7XPAEZSoXqnJiFUUMlG%2FoRWtEmIeL84bckce5M%3D">
+    src="https://devnos-cdn-endpoint-000.azureedge.net/devnosbloganalytics/onebyone.gif?sv=2019-10-10&st=2020-09-01T22%3A48%3A03Z&se=2025-09-02T22%3A48%3A00Z&sr=b&sp=r&sig=YVP0a7XPAEZSoXqnJiFUUMlG%2FoRWtEmIeL84bckce5M%3D"
+    style="display:none;">
 </body>
 
 </html>
